initial commit feature branch

--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -28,7 +28,7 @@ steps:
  setupCommonPipelineEnvironment:
   runStage:
    BACKEND_INTEGRATION_TESTS: true
-   FRONTEND_INTEGRATION_TESTS: true
+   FRONTEND_INTEGRATION_TESTS: false
 
 ### Stage-specific configuration
 stages:
