--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -29,9 +29,19 @@ steps:
   runStage:
    BACKEND_INTEGRATION_TESTS: true
    FRONTEND_INTEGRATION_TESTS: true
+   ARTIFACT_DEPLOYMENT: true
 
 ### Stage-specific configuration
 stages:
+ artifactDeployment:
+  nexus:
+    version: nexus3
+    url: f1145e57.ngrok.io/
+    repository: first-app
+    credentialsId: 'nexus'
+    additionalClassifiers:
+      - type: jar
+        classifier: classes
 #  backendIntegrationTests:
 #    credentials:
 #      - alias: 'mySystemAlias'
